@startuml

class Object
interface Cloneable
class WeeklyLog
class Attachment

class Object {
    + clone() : Object
}

class WeeklyLog {
    - attachment : Attachment
    - name       : String
    - date       : String
    - content    : String
    + setAttachment(Attachment attachment) : void
    + getAttachment()                      : Attachment
    + setName(String name)                 : void
    + getName()                            : String
    + setDate(String date)                 : void
    + getDate()                            : String
    + setContent(String content)           : void
    + getContent()                         : String
    + clone()                              : WeeklyLog
}

class Attachment {
    - name : String
    + setName(String name) : void
    + getName()            : String
    + download()           : void
}

Object <|-- WeeklyLog
Cloneable <|... WeeklyLog
Attachment <--o WeeklyLog

@enduml
